# CUDA-Driven-GameOfLife

./: CMakeLists.txt  CMakePresets.json  CUDA_GameOfLife.slnx  README.md  project_report.md
.github/workflows/: msbuild.yml
CUDA_GameOfLife/: CMakeLists.txt  CUDA_GameOfLife.vcxproj  CUDA_GameOfLife.vcxproj.filters  device_buffer.h  game_of_life.cu  grid_buffer.h  main.cpp
CUDA_GameOfLife/common/: grid_buffer.h
CUDA_GameOfLife/cuda/: cuda_simulation.cu  cuda_simulation.h  cuda_simulation.hpp  device_buffer.cuh  device_buffer.h  game_of_life.cu  simulation_buffers.cuh
CUDA_GameOfLife/sdl/: game_window.cpp  game_window.h  game_window.hpp
GameOfLife_Test/: GameOfLife_Test.vcxproj  test.cpp
